<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="go2zilla@todo.todo">go2zilla</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>go2_control</exec_depend>
  <exec_depend>go2_image_transport</exec_depend>
  <exec_depend>yolo_ai</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
